2003-02-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: /kick support

2003-02-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/: Added configuration interface

	* src/mod_configure.erl: Use jabber:iq:data instead of
	jabber:x:data
	* src/mod_disco.erl: Likewise

2003-02-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_configure.erl: Backup management support
	* src/mod_disco.erl: Likewise

2003-02-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline.erl: Now possible to unload this module
	* src/ejabberd_sm.erl: Added checks to work correctly when
	mod_offline not loaded
	* src/ejabberd_c2s.erl: Likewise

	* src/mod_register.erl: Added support for users removal

	* src/ejabberd_auth.erl: Added function to remove user only if
	specified password correct

	* src/mod_irc/mod_irc_connection.erl: Fixed bug with changing
	availability status, added processing of "QUIT" message

2003-02-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: Fixed bug with handling of roster set
	stanzas which contains CDATA

	* src/mod_irc/mod_irc_connection.erl (handle_info/3): Fixed
	parsing of string that have "\n" line separators (not "\r\n")

2003-02-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/: Added support for private chats, nicks changes and
	error handling

2003-02-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/: Still not completed...

2003-02-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/: New IRC transport (not completed yet)

2003-02-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Answer "Bad Request" on unknown tags

2003-02-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix: close socket when stream is closed

	* src/mod_offline.erl: Now all offline packets processed in
	separate queue to avoid delaying of other packets transmission.
	Also all packets in queue processed in one transaction.
