@@ -1,3 +1,7 @@
+2003-02-27  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_irc/mod_irc_connection.erl: Support for topic changes
+
 2003-02-24  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_irc/mod_irc_connection.erl: /kick support
